--- a/styles/style.css
+++ b/styles/style.css
@@ -36,3 +36,170 @@ ul,
 ol {
   list-style: none;
 }
+
+.content {
+  display: grid;
+  grid-template-columns: 711px 399px;
+  align-items: end;
+  gap: 30px;
+  margin-block-start: 133px;
+  margin-inline-start: 30px;
+  margin-inline-end: 30px;
+}
+
+.result {
+  width: 100%;
+  display: grid;
+  gap: 16px;
+}
+
+.result__video-container {
+  display: block;
+  width: 100%;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+
+  object-position: center;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 225px 212px 194px;
+  gap: 40px;
+  align-items: end;
+  padding-block-end: 5px;
+}
+
+.search-form__fieldset {
+  display: block;
+  border: none;
+}
+
+.search-form__pseudo-checkbox {
+  background-color: transparent;
+  border: solid 1px white;
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  cursor: pointer;
+  vertical-align: middle;
+}
+
+.search-form__pseudo-checkbox:active {
+}
+
+.search-form__checkbox-list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 15px;
+  padding-block-end: 5px;
+}
+
+.search-form__textfield {
+  appearance: none;
+  width: 100%;
+  color: rgb(255 255 255 / 0.7);
+  font-size: inherit;
+  font-family: inherit;
+  background-color: transparent;
+  border: none;
+  border-block-end: solid white 1px;
+  border-block-start: solid white 1px;
+}
+
+.button {
+  font-family: inherit;
+  color: inherit;
+  font-size: inherit;
+  background-color: transparent;
+  border: solid white 1px;
+  height: 34px;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  width: 194px;
+}
+
+.search-form__fieldset-title {
+  font-weight: normal;
+  font-size: 18px;
+  margin-block-end: 5px;
+}
+
+.content__details {
+  display: grid;
+}
+
+.content__list {
+  display: grid;
+  height: 298px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  gap: 30px;
+}
+
+.content__card-link {
+  color: white;
+  text-decoration: none;
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2px;
+}
+
+.title {
+  font-family: Oswald, sans-serif;
+  font-size: 75px;
+  font-weight: bold;
+  text-transform: uppercase;
+  line-height: 95%;
+  margin-block-end: 26px;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__video-card-description-container {
+  display: block;
+  width: 200px;
+  height: 101px;
+}
+
+.content__video-card-title {
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  line-height: 100%;
+  margin-block-end: 6px;
+}
+
+.content__video-card-description {
+  line-height: 16.2px;
+}
+
+.content__video-card-thumbnail {
+  display: block;
+  width: 194px;
+  height: 103px;
+}
+
+.more-button {
+  width: 100%;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
