--- a/styles/style.css
+++ b/styles/style.css
@@ -54,15 +54,17 @@ ol {
 }
 
 .result__video-container {
+  position: relative;
   display: block;
   width: 100%;
+  height: 386px;
 }
 
 .result__video {
   width: 100%;
   height: 100%;
-
   object-position: center;
+  
 }
 
 .search-form {
@@ -70,32 +72,11 @@ ol {
   grid-template-columns: 225px 212px 194px;
   gap: 40px;
   align-items: end;
-  padding-block-end: 5px;
 }
 
 .search-form__fieldset {
   display: block;
   border: none;
-}
-
-.search-form__pseudo-checkbox {
-  background-color: transparent;
-  border: solid 1px white;
-  display: inline-block;
-  width: 19px;
-  height: 19px;
-  cursor: pointer;
-  vertical-align: middle;
-}
-
-.search-form__pseudo-checkbox:active {
-}
-
-.search-form__checkbox-list {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  gap: 15px;
-  padding-block-end: 5px;
 }
 
 .search-form__textfield {
@@ -110,6 +91,42 @@ ol {
   border-block-start: solid white 1px;
 }
 
+.search-form__textfield:focus {
+outline: none;
+}
+
+
+.search-form__label:has(:focus-visible) {
+  outline: solid white 1px;
+  outline-offset: 1px;
+}
+
+.search-form__pseudo-checkbox {
+  background-color: transparent;
+  border: solid 1px white;
+  display: inline-block;
+  width: 19px;
+  height: 19px;
+  cursor: pointer;
+  vertical-align: middle;
+  margin-block-end: 2px;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  background-color: white;
+  height: 15px;
+  width: 15px;
+  z-index: -1;
+}
+
+.search-form__checkbox-list {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 15px;
+  padding-block-end: 5px;
+}
+
 .button {
   font-family: inherit;
   color: inherit;
@@ -118,6 +135,15 @@ ol {
   border: solid white 1px;
   height: 34px;
   cursor: pointer;
+}
+
+.button:focus {
+  outline: none;
+}
+  
+.button:focus-visible {
+  outline: solid white 1px;
+  outline-offset: 1px;
 }
 
 .search-form__submit-button {
@@ -135,6 +161,7 @@ ol {
 }
 
 .content__list {
+  position: relative;
   display: grid;
   height: 298px;
   overflow-y: auto;
@@ -158,7 +185,7 @@ ol {
   font-size: 75px;
   font-weight: bold;
   text-transform: uppercase;
-  line-height: 95%;
+  line-height: 94%;
   margin-block-end: 26px;
 }
 
@@ -168,8 +195,8 @@ ol {
 
 .content__video-card-description-container {
   display: block;
-  width: 200px;
-  height: 101px;
+  width: 100%;
+  height: 100%;
 }
 
 .content__video-card-title {
@@ -193,6 +220,11 @@ ol {
 .more-button {
   width: 100%;
 }
+
+
+
+
+
 
 .visually-hidden {
   position: absolute;
