--- a/styles/style.css
+++ b/styles/style.css
@@ -48,7 +48,7 @@ ol {
 }
 
 .result {
-  width: 100%;
+  inline-size: 100%;
   display: grid;
   gap: 16px;
 }
@@ -56,15 +56,14 @@ ol {
 .result__video-container {
   position: relative;
   display: block;
-  width: 100%;
-  height: 386px;
+  inline-size: 100%;
+  block-size: 386px;
 }
 
 .result__video {
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   object-position: center;
-  
 }
 
 .search-form {
@@ -81,7 +80,7 @@ ol {
 
 .search-form__textfield {
   appearance: none;
-  width: 100%;
+  inline-size: 100%;
   color: rgb(255 255 255 / 0.7);
   font-size: inherit;
   font-family: inherit;
@@ -92,21 +91,25 @@ ol {
 }
 
 .search-form__textfield:focus {
-outline: none;
+  outline: none;
 }
-
 
 .search-form__label:has(:focus-visible) {
   outline: solid white 1px;
   outline-offset: 1px;
 }
 
+.search-form__label:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .search-form__pseudo-checkbox {
   background-color: transparent;
   border: solid 1px white;
   display: inline-block;
-  width: 19px;
-  height: 19px;
+  inline-size: 19px;
+  block-size: 19px;
   cursor: pointer;
   vertical-align: middle;
   margin-block-end: 2px;
@@ -114,10 +117,13 @@ outline: none;
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
   content: '';
+  display: inline-block;
   background-color: white;
-  height: 15px;
-  width: 15px;
-  z-index: -1;
+  block-size: 15px;
+  inline-size: 15px;
+  margin-inline-start: 1px;
+  margin-block-end: 1px;
+  z-index: 10;
 }
 
 .search-form__checkbox-list {
@@ -133,21 +139,30 @@ outline: none;
   font-size: inherit;
   background-color: transparent;
   border: solid white 1px;
-  height: 34px;
+  block-size: 34px;
   cursor: pointer;
 }
 
 .button:focus {
   outline: none;
 }
-  
+
 .button:focus-visible {
   outline: solid white 1px;
   outline-offset: 1px;
 }
 
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
 .search-form__submit-button {
-  width: 194px;
+  inline-size: 194px;
 }
 
 .search-form__fieldset-title {
@@ -163,14 +178,39 @@ outline: none;
 .content__list {
   position: relative;
   display: grid;
-  height: 298px;
+  block-size: 298px;
   overflow-y: auto;
   overflow-x: hidden;
   gap: 30px;
 }
 
 .content__card-link {
+  display: block;
   color: white;
+  text-decoration: none;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: solid white 1px;
+  outline-offset: -1px;
+  /*отрицательное значение, чтобы вертикальные стороны обводки были видны*/
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+  text-decoration: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;
   text-decoration: none;
 }
 
@@ -195,8 +235,8 @@ outline: none;
 
 .content__video-card-description-container {
   display: block;
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
 }
 
 .content__video-card-title {
@@ -213,18 +253,13 @@ outline: none;
 
 .content__video-card-thumbnail {
   display: block;
-  width: 194px;
-  height: 103px;
+  inline-size: 194px;
+  block-size: 103px;
 }
 
 .more-button {
-  width: 100%;
+  inline-size: 100%;
 }
-
-
-
-
-
 
 .visually-hidden {
   position: absolute;
