--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ ol {
 .result__video {
   inline-size: 100%;
   block-size: 100%;
+  object-fit: cover;
   object-position: center;
 }
 
@@ -255,6 +256,8 @@ ol {
   display: block;
   inline-size: 194px;
   block-size: 103px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .more-button {
